--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -114,7 +114,7 @@ $(function(){
 		animation:'none',
 		arrow:true,
 		trigger:'custom',
-		triggerOpen:{mouseenter: true},
+		triggerOpen:{mouseenter: true, hover: true},
 		triggerClose:{click:true,scroll:true,mouseleave:true}
 	});
 
@@ -287,7 +287,7 @@ function setToolTip() {
 		contentAsHTML:true,
 		interactive:true,
 		trigger:'custom',
-		triggerOpen:{click: true},
+		triggerOpen:{click: true, mouseenter: true},
 		triggerClose:{click:true,scroll:true,mouseleave:true}
 	});
 }
